--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
 	"main": "src/server.ts",
 	"type": "module",
 	"scripts": {
-		"start": "nodemon --exec node --loader ts-node/esm src/server.ts"
+		"start:dev": "nodemon --exec node --loader ts-node/esm src/server.ts"
 	},
 	"repository": {
 		"type": "git",
