--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
 	"main": "src/server.ts",
 	"type": "module",
 	"scripts": {
-		"start:dev": "nodemon --exec node --loader ts-node/esm src/server.ts"
+		"start:dev": "nodemon --exec node --loader ts-node/esm src/server.ts",
+		"test": "jest"
 	},
 	"repository": {
 		"type": "git",
@@ -18,9 +19,13 @@
 	},
 	"homepage": "https://github.com/LITinx/simple-crud-api#readme",
 	"devDependencies": {
+		"@jest/globals": "^29.7.0",
+		"@types/jest": "^29.5.12",
 		"@types/node": "^20.11.17",
 		"dotenv": "^16.4.1",
+		"jest": "^29.7.0",
 		"nodemon": "^3.0.3",
+		"ts-jest": "^29.1.2",
 		"ts-node": "^10.9.2",
 		"typescript": "^5.3.3"
 	}
